<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools">
<androidx.constraintlayout.widget.ConstraintLayout
                                                   android:layout_width="match_parent"
                                                   android:layout_height="match_parent"
                                                   tools:context=".MenuFragment" android:id="@+id/frameLayout">
    <TextView
            android:text="BMI, atau Body Mass Index merupakan cara untuk \nmenentukan apakah berat badanmu ideal atau tidak. \nCobalah sekarang!"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView" app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="16dp"
            android:layout_marginTop="16dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="16dp"
            app:layout_constraintHorizontal_bias="0.295"/>
    <TextView
            android:text="Berat badan (kg)"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView3"
            app:layout_constraintTop_toBottomOf="@+id/textView" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="28dp" android:layout_marginTop="36dp"
    />
    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:ems="10"
            android:id="@+id/berat" android:layout_marginTop="20dp"
            app:layout_constraintTop_toBottomOf="@+id/textView"
            android:layout_marginEnd="24dp"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toEndOf="@+id/textView3"
            android:layout_marginStart="8dp"/>
    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:ems="10"
            android:id="@+id/tinggi" android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@+id/berat"
            android:layout_marginEnd="40dp"
            app:layout_constraintEnd_toEndOf="parent"/>
    <TextView
            android:text="Tinggi badan (cm)"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView4" app:layout_constraintEnd_toStartOf="@+id/tinggi"
            android:layout_marginEnd="8dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="16dp" app:layout_constraintHorizontal_bias="0.631"
            android:layout_marginTop="44dp" app:layout_constraintTop_toBottomOf="@+id/textView3"/>
    <TextView
            android:text="Jenis kelamin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView5" android:layout_marginTop="30dp"
            app:layout_constraintTop_toBottomOf="@+id/textView4" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="28dp"
    />
    <RadioGroup
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/kelamin"
            app:layout_constraintTop_toBottomOf="@+id/tinggi" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="16dp" android:layout_marginEnd="16dp"
            app:layout_constraintStart_toEndOf="@+id/textView5" app:layout_constraintHorizontal_bias="0.31"
    >
        <RadioButton
                android:text="@string/wanita"
                android:layout_width="137dp"
                android:layout_height="wrap_content" android:id="@+id/wanita" android:layout_weight="1"/>
        <RadioButton
                android:text="@string/pria"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:id="@+id/pria" android:layout_weight="1"/>
    </RadioGroup>
    <Button
            android:text="@string/hitung"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/hitung" android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@+id/kelamin" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"/>
    <TextView
            android:text="@string/hasil_BMI"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/hasil_BMI" android:layout_marginTop="64dp"
            app:layout_constraintTop_toBottomOf="@+id/hitung" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="16dp" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="16dp" android:textSize="18sp"/>
    <TextView
            android:text="@string/parameter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/parameter" android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@+id/hasil_BMI" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="16dp" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="16dp" android:textSize="64sp" android:textColor="#2891A0"/>
    <Button
            android:text="@string/Bagikan"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/bagikan" android:layout_marginStart="16dp"
            android:layout_marginTop="20dp" app:layout_constraintTop_toBottomOf="@+id/parameter"
            android:drawableLeft="@android:drawable/ic_menu_sort_by_size"
            app:layout_constraintStart_toEndOf="@+id/saran" android:layout_marginEnd="16dp"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintHorizontal_bias="0.172"/>
    <Button
            android:text="@string/lihat_saran"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/saran" app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="56dp"
            android:layout_marginTop="20dp" app:layout_constraintTop_toBottomOf="@+id/parameter"
            android:drawableLeft="@android:drawable/ic_menu_sort_by_size"/>
</androidx.constraintlayout.widget.ConstraintLayout>
</layout>